[gd_scene load_steps=11 format=3 uid="uid://cohmext14ho56"]

[ext_resource type="Script" uid="uid://jojs3i2towy0" path="res://Enemies/Mygale/mygale.gd" id="1_g1fhx"]
[ext_resource type="Texture2D" uid="uid://n2rl8icsahv5" path="res://Enemies/Mygale/attaque3.png" id="2_mvlt6"]
[ext_resource type="Texture2D" uid="uid://ckp16qwvcq1" path="res://Enemies/Mygale/attaque.png" id="2_tlaig"]
[ext_resource type="Texture2D" uid="uid://mwurl35unoxj" path="res://Enemies/Mygale/idle.png" id="3_mvlt6"]
[ext_resource type="Texture2D" uid="uid://cx8s66ryawj51" path="res://Enemies/Mygale/walk1.png" id="4_sxn7g"]
[ext_resource type="Texture2D" uid="uid://bhugkh6xqlinf" path="res://Enemies/Mygale/walk2.png" id="5_g1fhx"]
[ext_resource type="PackedScene" uid="uid://nx7n3qyhsmbr" path="res://Enemies/HealthBar.tscn" id="9_kg14j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4q0aj"]
size = Vector2(88.5, 58)

[sub_resource type="CircleShape2D" id="CircleShape2D_g1fhx"]
radius = 65.0077

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mvlt6")
}, {
"duration": 1.0,
"texture": ExtResource("2_tlaig")
}],
"loop": true,
"name": &"attaque",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_mvlt6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_mvlt6")
}],
"loop": false,
"name": &"slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_mvlt6")
}],
"loop": true,
"name": &"stone",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_sxn7g")
}, {
"duration": 1.0,
"texture": ExtResource("5_g1fhx")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="mygale" type="CharacterBody2D" groups=["Enemies"]]
position = Vector2(712.318, 417.911)
collision_layer = 8
collision_mask = 3
script = ExtResource("1_g1fhx")

[node name="FlipNode" type="Node2D" parent="."]

[node name="Muzzle" type="Marker2D" parent="FlipNode"]
position = Vector2(-25.318, -18.911)
rotation = 0.785398

[node name="Area2D" type="Area2D" parent="." groups=["Enemies"]]
position = Vector2(30.682, 39.089)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-18.75, -50)
shape = SubResource("RectangleShape2D_4q0aj")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="HealthBar" parent="." instance=ExtResource("9_kg14j")]
position = Vector2(-49.318, -93.911)
scale = Vector2(1.07101, 1.11)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6.682, -24.911)
shape = SubResource("CircleShape2D_g1fhx")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(6.68201, -1.91101)
scale = Vector2(0.3, 0.318)
sprite_frames = SubResource("1")
animation = &"attaque"
frame = 1
frame_progress = 0.107307

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
